Haojie-Liu | Added new test cases